tests/baselines/reference/decoratorOnClass3.errors.txt
tests/cases/conformance/decorators/class/decoratorOnClass3.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/decorators/class/decoratorOnClass3.ts (1 errors) ====
    declare function dec<T>(target: T): T;
    
    export
    ~~~~~~
!!! error TS1128: Declaration or statement expected.
    @dec
    class C {
    }